5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1811_2563.log
== SUBMITION (2019-06-13 01:13:29) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
while(size(y)>1):
	x=0
	for a in y:
		if(i>=5) and (i<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- EXECUTION TIME:
1.05355
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2563/main.py", line 6, in <module>
    if(i>=5) and (i<7):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:14:12) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
while(size(y)>1):
	x=0
	for a in y:
		if(i>=5) and (i<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:14:55) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- EXECUTION TIME:
0.820552
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
3
4
5
6
0
0
0
0
0
0
0
0
0
1
1
1
1
1
1
1
2
3
0
0
0
0
1
1
1
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
1
2
3
4
5
6
7
8
9
10
11
0
1
1
2
2
3
3
4
0
0
0
0
0
0
1
1
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
0
0
1
2
2
3
4
5
0
0
0
1
2
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:15:43) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:18:36) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- EXECUTION TIME:
0.85298
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
3
4
5
6
0
0
0
0
0
0
0
0
0
1
1
1
1
1
1
1
2
3
0
0
0
0
1
1
1
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
1
2
3
4
5
6
7
8
9
10
11
0
1
1
2
2
3
3
4
0
0
0
0
0
0
1
1
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
0
0
1
2
2
3
4
5
0
0
0
1
2
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:19:11) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
x=0
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- EXECUTION TIME:
1.10651
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
3
4
5
6
0
0
0
0
0
0
0
0
0
1
1
1
1
1
1
1
2
3
0
0
0
0
1
1
1
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
1
2
3
4
5
6
7
8
9
10
11
0
1
1
2
2
3
3
4
0
0
0
0
0
0
1
1
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
0
0
1
2
2
3
4
5
0
0
0
1
2
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:20:06) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
x=0
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- EXECUTION TIME:
1.10228
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
3
4
5
6
0
0
0
0
0
0
0
0
0
1
1
1
1
1
1
1
2
3
0
0
0
0
1
1
1
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
1
2
3
4
5
6
7
8
9
10
11
0
1
1
2
2
3
3
4
0
0
0
0
0
0
1
1
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
0
0
1
2
2
3
4
5
0
0
0
1
2
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:22:38) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
x=0
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:22:40) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
x=0
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- EXECUTION TIME:
1.15318
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
3
4
5
6
0
0
0
0
0
0
0
0
0
1
1
1
1
1
1
1
2
3
0
0
0
0
1
1
1
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
medias finais1
2
3
4
5
6
7
8
9
10
11
 meida   0
1
1
2
2
3
3
4
 meida   0
0
0
0
0
0
1
1
1
 meida
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
medias finais0
0
1
2
2
3
4
5
 meida   0
0
0
1
2
3
 meida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:22:51) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
x=0
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:24:52) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
x=0
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
		print(x)
	y=array(eval(input(" meida   ")))
-- EXECUTION TIME:
0.8818
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
3
4
5
6
0
0
0
0
0
0
0
0
0
1
1
1
1
1
1
1
2
3
0
0
0
0
1
1
1
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
1
2
3
4
5
6
7
8
9
10
11
0
1
1
2
2
3
3
4
0
0
0
0
0
0
1
1
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
0
0
1
2
2
3
4
5
0
0
0
1
2
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:21:34) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
x=0
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
	print(x)
	y=array(eval(input(" meida   ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 14:21:45) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
x=0
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
	print(x)
	y=array(eval(input(" meida   ")))
-- EXECUTION TIME:
1.079
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:23:18) 
-- CODE:
from numpy import*
y=array(eval(input("medias finais")))
x=0
while(size(y)>1):
	x=0
	for a in y:
		if(a>=5) and (a<7):
			x=x+1
	print(x)
	y=array(eval(input(" meida   ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
